HomepageModule: Adjust line height of headers to avoid cut off
Without this adjustment, the headers are cut off at the top (on Firefox at
least)

--- a/modules/homepage/ext.growthExperiments.BaseModule.less
+++ b/modules/homepage/ext.growthExperiments.BaseModule.less
@@ -15,7 +15,7 @@
 	h2.growthexperiments-homepage-module-header {
 		font-family: @homepageHeaderFont;
 		font-size: 1.2em;
-		line-height: 1;
+		line-height: 1.2em;
 		font-weight: bold;
 		color: @colorGray2;
 		margin-top: 0;
